syntax = "proto3";

package com.example.material;

// Summary information, used for lists
message Material {
  string id = 1; // UUID is represented as a string in protobuf
  string materialName = 2;
  string description = 3;
  string materialType = 5;
  string unit = 6;
}
