syntax = "proto3";

// Provide to MaterialDetails
message MaterialBatch{

}